--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Sistema de seguridad inteligente con IA multimodal para reconocimiento de personas">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/extra-styles.css') }}">
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 </head>
 
